# motor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  STM32F4Toolchain.cmake
sdk/: CMakeLists.txt
sdk/c_api_examples/: CMakeLists.txt  c_api_example.c
sdk/matlab_c_api_examples/: motor_simulator.m
src/: CMakeLists.txt  main.cpp  main_simulator.cpp
src/api/: CMakeLists.txt
src/api/c/: CMakeLists.txt  motor_c.cpp  motor_c.h
src/api/cpp/: CMakeLists.txt  motor.cpp  motor.h  motor_simulator.cpp  motor_simulator.h
src/hal/: CMakeLists.txt  hal_adc.h  hal_fun.h  hal_pwm.h  hal_qep.h  logging.h  periodic_communication.h  periodic_loop.h
src/hal_m4/: CMakeLists.txt  hal_fun.cpp  periodic_loop.cpp
src/hal_m4/st446/: CMakeLists.txt  logging.h  main.cpp  pin_init.cpp  pin_init.h  stdout_USART.c  stm32f446xx_local.h  system.cpp  system_init.cpp  system_init.h
src/hal_simulator/: CMakeLists.txt  dq_transform.cpp  dq_transform.h  hal_adc.cpp  hal_fun.cpp  hal_pwm.cpp  hal_qep.cpp  motor_simulator.cpp  motor_simulator.h  motor_simulator_voltage.cpp  motor_simulator_voltage.h  periodic_communication.cpp  periodic_loop.cpp
src/messages/: CMakeLists.txt  messages.h  periodic_communication.h
src/simulator/: CMakeLists.txt  brushless_motor_simulation.cpp  brushless_motor_simulation.h  motor_simulation.cpp  motor_simulation.h  motor_simulator.cpp  motor_simulator.h  motor_simulator_voltage.cpp  motor_simulator_voltage.h  simulator.cpp  simulator.h  system.cpp  system.h
src/system/: CMakeLists.txt  communication.cpp  communication.h  foc_control_loop.cpp  foc_control_loop.h  main_control_loop.cpp  main_control_loop.h  periodic_loop.cpp  periodic_loop.h  system.cpp  system.h  system_update_loop.cpp  system_update_loop.h
src/system/control/: control_fun.cpp  control_fun.h  foc.cpp  foc.h
src/system/sensor/: encoder.h  qep_encoder.cpp  qep_encoder.h  sensor.h
src/win32/: win32.h
